Created dynamic category menu

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
