--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ configparser==5.3.0
 Django==4.2
 django-cors-headers==3.14.0
 django-debug-toolbar==4.0.0
+django-filter==23.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
