--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,9 @@ idna==3.4
 Pillow==9.5.0
 psycopg==3.1.8
 PyJWT==2.6.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-slugify==8.0.1
 pytz==2023.3
 sqlparse==0.4.3
 typing_extensions==4.5.0
