--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@svgr/plugin-svgo": "^8.0.1",
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "mdb-react-ui-kit": "^6.0.0",
+    "css-select": "^5.1.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
+    "nth-check": "^2.1.1",
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -19,12 +23,13 @@
     "react-icons": "^4.8.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
-    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "svgo": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
