--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,54 @@
+argcomplete==3.0.8
 asgiref==3.6.0
 async-timeout==4.0.2
+attrs==23.1.0
+autobahn==23.1.2
+Automat==22.10.0
 certifi==2022.12.7
+cffi==1.15.1
+channels==4.0.0
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
 configparser==5.3.0
+constantly==15.1.0
+cryptography==40.0.2
+daphne==4.0.0
 Django==4.2
 django-cors-headers==3.14.0
 django-debug-toolbar==4.0.0
 django-filter==23.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
+jmespath==1.0.1
+MarkupSafe==2.1.2
 Pillow==9.5.0
 psycopg==3.1.8
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 PyJWT==2.6.0
+pyOpenSSL==23.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3
+PyYAML==6.0
+requests==2.30.0
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.3
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.65.0
+Twisted==22.10.0
+twisted-iocpsupport==1.0.3
+txaio==23.1.1
 typing_extensions==4.5.0
 tzdata==2023.3
+urllib3==1.26.15
+Werkzeug==2.3.4
+zope.interface==6.0
