--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ Automat==22.10.0
 certifi==2022.12.7
 cffi==1.15.1
 channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
@@ -14,6 +15,7 @@ configparser==5.3.0
 constantly==15.1.0
 cryptography==40.0.2
 daphne==4.0.0
+dj-database-url==2.0.0
 Django==4.2
 django-cors-headers==3.14.0
 django-debug-toolbar==4.0.0
@@ -24,9 +26,12 @@ hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
 jmespath==1.0.1
+Markdown==3.4.3
 MarkupSafe==2.1.2
+msgpack==1.0.5
 Pillow==9.5.0
 psycopg==3.1.8
+psycopg2==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
@@ -37,6 +42,7 @@ python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3
 PyYAML==6.0
+redis==4.5.5
 requests==2.30.0
 service-identity==21.1.0
 six==1.16.0
