--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,46 @@
+amqp==5.1.1
 argcomplete==3.0.8
 asgiref==3.6.0
 async-timeout==4.0.2
 attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.12.7
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
 charset-normalizer==3.1.0
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.6
 configparser==5.3.0
 constantly==15.1.0
+cron-descriptor==1.4.0
 cryptography==40.0.2
 daphne==4.0.0
 dj-database-url==2.0.0
 Django==4.2
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-cors-headers==3.14.0
 django-debug-toolbar==4.0.0
 django-filter==23.1
+django-timezone-field==5.0
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
 jmespath==1.0.1
+kombu==5.2.4
 Markdown==3.4.3
 MarkupSafe==2.1.2
 msgpack==1.0.5
 Pillow==9.5.0
+prompt-toolkit==3.0.38
 psycopg==3.1.8
 psycopg2==2.9.6
 pyasn1==0.5.0
@@ -37,6 +48,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.6.0
 pyOpenSSL==23.1.1
+python-crontab==2.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
@@ -56,5 +68,7 @@ txaio==23.1.1
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
+vine==5.0.0
+wcwidth==0.2.6
 Werkzeug==2.3.4
 zope.interface==6.0
