--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.2",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.8.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
