--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,8 @@ constantly==15.1.0
 cron-descriptor==1.4.0
 cryptography==40.0.2
 daphne==4.0.0
+defusedxml==0.7.1
+Deprecated==1.2.14
 dj-database-url==2.0.0
 Django==4.2
 django-celery-beat==2.5.0
@@ -29,16 +31,21 @@ django-celery-results==2.5.1
 django-cors-headers==3.14.0
 django-debug-toolbar==4.0.0
 django-filter==23.1
+django-oauth-toolkit==2.3.0
 django-timezone-field==5.0
 djangorestframework==3.14.0
+drf-social-oauth2==2.1.2
+ecdsa==0.18.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
 jmespath==1.0.1
+jwcrypto==1.5.0
 kombu==5.2.4
 Markdown==3.4.3
 MarkupSafe==2.1.2
 msgpack==1.0.5
+oauthlib==3.2.2
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 psycopg==3.1.8
@@ -51,13 +58,19 @@ pyOpenSSL==23.1.1
 python-crontab==2.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-slugify==8.0.1
+python3-openid==3.2.0
 pytz==2023.3
 PyYAML==6.0
 redis==4.5.5
 requests==2.30.0
+requests-oauthlib==1.3.1
+rsa==4.9
 service-identity==21.1.0
 six==1.16.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.2
 sqlparse==0.4.3
 text-unidecode==1.3
 toml==0.10.2
@@ -71,4 +84,5 @@ urllib3==1.26.15
 vine==5.0.0
 wcwidth==0.2.6
 Werkzeug==2.3.4
+wrapt==1.15.0
 zope.interface==6.0
